# ChangeLog for dev-python/Djblets
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/Djblets/ChangeLog,v 1.6 2011/11/11 00:03:18 xmw Exp $

  11 Nov 2011; Michael Weber <xmw@gentoo.org> -Djblets-0.6.3.ebuild:
  Remove old versions

*Djblets-0.6.11 (25 Sep 2011)

  25 Sep 2011; Michael Weber <xmw@gentoo.org> +Djblets-0.6.11.ebuild:
  Version bump (thanks to James Broadhead for the hint, bug 383495)

  01 Jan 2011; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  Djblets-0.6.3.ebuild:
  Fix deprecation warning.

  24 Aug 2010; Michael Weber <xmw@gentoo.org> Djblets-0.6.3.ebuild:
  Removed useless comments.

*Djblets-0.6.3 (24 Aug 2010)

  24 Aug 2010; Michael Weber <xmw@gentoo.org> +Djblets-0.6.3.ebuild,
  +metadata.xml:
  Initial commit for Djblets. Fixes bug #318993
