@@ -2,13 +2,13 @@
 Hash: SHA256
 
 DIST Djblets-0.6.11.tar.gz 274652 RMD160 cf538a0f12a2fa8e7467e808a67ca1c92c4e7f5d SHA1 946550ee608160cb53ec3c86c31102bc3420bf8f SHA256 9ee6295cb8460c1585727d8c436a3dc2b0c59d710f38374de72737bc7100be0d
-EBUILD Djblets-0.6.11.ebuild 648 RMD160 4c199afd2c6ffac8bfc2e9891dc9f682cb6e44f7 SHA1 0f34bb86fe3cb92acefb5032e39e125828fe9f88 SHA256 6d2cec02d64948e012a320054ec50226f1accac5d7923795116f9e86ff5e4c34
-MISC ChangeLog 855 RMD160 e625b0041d1552ca89357055d3988cc0be6837fc SHA1 2f2fea43332e954fb80680d61a6b14fc8d378139 SHA256 5fde56c99beb6e4098d3098959f53fd85548e0ae7c9013a10711ba33abaab627
+EBUILD Djblets-0.6.11.ebuild 678 RMD160 2fc116032ce5a8a152ff4fe15fef0627aa2172ee SHA1 0943bb0604895b345921837aae46ecd211922925 SHA256 a6cbb6e67347a0a24c4d3be763a62798626c9375cdd946dbafb4a2bb2f543319
+MISC ChangeLog 962 RMD160 cf12352dd11b87fcd8446efc168bfb7cbdb56da6 SHA1 527fee9b6fcc90177e53fe7b6345c97d19c7a96a SHA256 cc97c835014f43b5e5e2f4d3cf975d464cf111e3d507edc9cd0cadfc7617634d
 MISC metadata.xml 223 RMD160 ece0d9320b4ad1fdb29d1dec4f85e84ffda0d863 SHA1 325a16f4c96d533e8642c26ab395b06ab42f51b5 SHA256 89097f936927d56068988263e382edb683f359b27293955708e9ade4d256220d
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iF4EAREIAAYFAk68ZksACgkQknrdDGLu8JCheQD/ebfgxYCFLehdJ1l0JRS2CAsX
-6YjwsQ4iAMRZaI+Y8K8A/0dti/fhuYZv90V14eXsyJtaieAR4qjhPHm2s05xuaHL
-=x5Yw
+iF4EAREIAAYFAk+O5ykACgkQC77qH+pIQ6StxAD/d7wAiA5fhkijRmkQoR2g+eq0
+Df6Vngq4E1HpNt7+GsUA/iIDT7V6L9NMVwJy34S+83ju1M0U7CRDB49En7OuKjQu
+=gwum
 -----END PGP SIGNATURE-----
