@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/Djblets
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/Djblets/ChangeLog,v 1.6 2011/11/11 00:03:18 xmw Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-python/Djblets/ChangeLog,v 1.7 2012/04/18 16:09:08 floppym Exp $
+
+  18 Apr 2012; Mike Gilbert <floppym@gentoo.org> Djblets-0.6.11.ebuild:
+  Set PYTHON_MODNAME=djblets.
 
   11 Nov 2011; Michael Weber <xmw@gentoo.org> -Djblets-0.6.3.ebuild:
   Remove old versions
